--- a/src/ReusableComponents/Profile__Bio/BioTags/BioTags.module.scss
+++ b/src/ReusableComponents/Profile__Bio/BioTags/BioTags.module.scss
@@ -7,6 +7,10 @@
     }
   }
   .bio__detail {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    & > span {
+      color: grey;
+      line-height: 2;
+    }
   }
 }
